# imogen

./: .dockerignore  .gitignore  CHANGELOG.md  CHANGELOG.stream.md  Dockerfile  Dockerfile.stream  Pipfile  README.md  actually_stream.py  better_imagegen.py  biggan_api.py  commented_out_install_steps.py  crossfade_etc.py  download_modals.sh  dreambot.py  feedforward.py  ganclip_orig.ipynb  ganclip_profiling.py  image_utils.py  imagegen.py  imagegen.service  install_cuda.sh  install_deps.sh  main_ganclip_hacking.py  mk_video.py  parse_prompts.py  postgres_jobs.py  profiling_stats  pyproject.toml  quality_of_prompt_divination.py  read_redis.py  stream.py  test_stream.sh  time_gan.py  tweet.py  utils.py  will_eat_the_pod.yaml
dalle/: CHANGELOG.md  Dockerfile  api.py  config.py  dalle.py  download_models.py  job.yaml  postgres_jobs.py
inspo/: README.md  a_public_copy.py  jupyter_export_spanish.py  resolution.py  spanish_ganclip.py
kube/: job.yaml  will_eat_the_pod.yaml
live/: fly.toml  website.py
notebooks/: local_started_fresh-v0.2.py  local_started_fresh.ipynb  local_started_fresh_v0.2.ipynb  v0.2-slimming_attempt.ipynb
old/: ganclip_profiling.py  no_shutdown_read_redis.py  noresample.py
predict/: Dockerfile  core.py  embed_image.py  fly.toml  get_embeddings.py  goodpostdetector.py  knn.py  likely_trainer.py  postnet.py  pyproject.toml  quality_of_prompt_divination.py  server.py  transfer.py  v2postnet.py
profiling/: adaptive_2d_pooling_profiling  baseline  baseline_profiling  ramp_to_gpu
prompt-website/: Dockerfile  fly.toml  pyproject.toml  website.py
twitter/: Dockerfile  fly.toml  pyproject.toml  tweet.py  utils.py
