[tool.poetry]
name = "goodpostdetector"
version = "1.2.3"
description = ""
authors = ["technillogue <technillogue@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = {extras = ["speedups"], version = "^3.8.1"}
torch = "*"
clip = {git = "https://github.com/openai/CLIP.git", branch="main"}
Pillow = "^9.1.0"
numpy = "^1.22.3"
torchvision = "^0.12.0"
tqdm = "^4.64.0"
ftfy = "*"
regex = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
