[tool.poetry]
name = "imogen-twitter"
version = "0.1.0"
description = "Tweets out Imogen's Best Imoges every hour"
authors = ["transfaeries <contact@transfaerie.com>"]

[tool.poetry.dependencies]
python = "^3.9"
TwitterAPI = "^2.7.12"
psycopg = {extras = ["binary"], version = "^3.0.12"}
requests = "^2.27.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"